ajout fichiers de test

--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,42 @@
   <title></title>
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/print.css">
   <!--endbuild-->
 </head>
 
 <body>
   <p>This is a gulp starter!</p>
 
+  <h1>Documentation jQuery</h1>
+  
+      <p><a href='http://docs.jquery.com'>Documentation officielle</a></p>
+  
+      <p><a href='http://api.jquery.com'>API jQuery</a></p>
+     
   <span id="textJQ"></span>
+
+  <!-- <div id="parent">
+    Texte dans le parent
+
+    <div id="enfant">
+      Texte dans l'enfant
+    </div>
+  </div> -->
+
+  <!-- <div id="div">    
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </div>
+
+  <span id="resultat"></span> <br><br>
+  <span id="resultats"></span> -->
+
+  <div id="mondiv">    
+    Les valeurs stockées dans la balise &ltdiv&gt  sont : <span id="sp1"></span>, <span id="sp2"></span> et <span id="sp3"></span>.
+
+  </div>
   
   <!--build:js js/main.min.js -->
   <script src="js/lib/jquery.js"></script>
